<resources>
    <string name="app_name">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="firstName" />
    <string name="firstNameHint">First Name</string>
    <string name="lastName" />
    <string name="lastNameHint">Last Name</string>
    <string name="studentId" />
    <string name="studentIdHint">Student ID</string>
    <string name="deptLabel">Department:</string>
    <string name="csDeptRadio">CS</string>
    <string name="sisDeptRadio">SIS</string>
    <string name="bioDeptRadio">BIO</string>
    <string name="otherDeptRadio">Other</string>
    <string name="saveBtn">Save</string>
    <string name="title_activity_select_avatar">Select Avatar</string>
    <string name="title_activity_display_my_profile">DisplayMyProfile</string>
    <string name="firstNameDisplay">Name:</string>
    <string name="displayNameLabel">Name:</string>
    <string name="displayName" />
    <string name="studentIdLabel">Student ID:</string>
    <string name="studentIdDisplay"></string>
    <string name="deptDisplay"></string>
    <string name="editButton">Edit</string>
</resources>
